pi/cluster/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jellyfin
  namespace: jellyfin
spec:
  rules:
    - host: "jellyfin.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
